# catkin_ws

./: .gitignore
src/Tivac/COZIR_CO2sensor/: COZIR_CO2sensor.ino
src/Tivac/Cozir_CO2_v2/: Cozir_CO2_v2.ino
src/Tivac/Dynamixel_w_lib/: Dynamixel_w_lib.ino
src/Tivac/MLX_COZIR/: MLX_COZIR.ino
src/Tivac/MPU6050_raw_129/: MPU6050_raw_129.ino
src/Tivac/base/: base.ino
src/Tivac/base_node_stellaris/: base_node_stellaris.ino
src/Tivac/brazo/: brazo.ino
src/Tivac/dynamixel_mavro/: dynamixel_mavro.ino
src/Tivac/libraries/Dynamixel/: DynamixelSerial.cpp
src/Tivac/libraries/I2Cdev/: I2Cdev.cpp
src/Tivac/libraries/MPU6050/: MPU6050.cpp  MPU6050_6Axis_MotionApps20.h
src/Tivac/libraries/UM7-Arduino-master/: UM7.cpp
src/Tivac/mpu_alone/: mpu_alone.ino
src/Tivac/mpu_as5043/: mpu_as5043.ino
src/Tivac/roboclaw_simple_serial/: roboclaw_simple_serial.ino
src/Tivac/serial_comm2/: serial_comm2.ino
src/Tivac/spi_as5043/: spi_as5043.ino
src/Tivac/termografo/: termografo.ino
src/beginner_tutorials/: CMakeLists.txt  hello_mavro.xml  package.xml
src/beginner_tutorials/include/beginner_tutorials/: Messenger.h
src/beginner_tutorials/launch/: .base.launch.swp  base_launch.launch  base_reconfigure.launch  brazo_launch.launch  left.launch  right.launch
src/beginner_tutorials/param/: board_base_config.yaml
src/beginner_tutorials/scripts/: Alive.py  SerialDataGateway.py  ballbot.py  ballbot_ypr.py  base_node.py  base_node_w_imu.py  brazo_node.py  encoder_lec.py
src/beginner_tutorials/src/: Encoders  Messenger.cpp  Messenger.h  Serial_class.cpp  Serial_main.cpp  Serial_soft.cpp  Serial_soft.h  conversor.cpp  diff_odom.cpp  documentacion nodos  encoder.cpp  hello_mavro.cpp  joy2twist.cpp  joy2twist_brazo.cpp  objetivos  pid_control.cpp  position_ctrl.cpp  twist2motor.cpp  vel_ballbot_new.cpp  vel_ctrl.cpp
src/beginner_tutorials/src/ballbot/: ballbot_gabriel.cpp  ctrl_ballbot.cpp  vel1_ballbot.cpp  vel2_ballbot.cpp  vel3_ballbot.cpp
src/beginner_tutorials/src/test/: control_motor.cpp
src/dynamic_tutorials/: .CMakeLists.txt.swp  CMakeLists.txt  Dynamic_rec.txt  package.xml
src/dynamic_tutorials/cfg/: Tutorials.cfg  joint_PID.cfg  nodeExample.cfg  vel_PID.cfg  wrist_PID.cfg
src/dynamic_tutorials/include/dynamic_tutorials/: joint_talker.h  listener.h  talker.h  vel_talker.h  wrist_talker.h
src/dynamic_tutorials/nodes/: client.py  listener.py  talker.py
src/dynamic_tutorials/src/: joint_node.cpp  joint_talker.cpp  listener.cpp  talker.cpp  talker_node.cpp  talker_node_2.cpp  vel_node.cpp  vel_talker.cpp  wrist_talker.cpp
src/finder_description_pkg/config/: arm_controllers.yaml
src/finder_description_pkg/launch/: README  arm_control.launch  arm_position.launch  arm_rviz.rviz  arm_state.launch  arm_world.launch  finder_arm_bringup.launch  finder_arm_moveit_controller_manager.launch  trajectory_controller.launch
src/finder_description_pkg/param/: arm_control.yaml  arm_position.yaml  arm_state.yaml  arm_trajectory_control.yaml
src/finder_description_pkg/urdf/: finder_arm.backup.dae  finder_arm.dae  finder_arm.urdf  seven-dof.backup.dae  seven-dof.dae  seven-dof.urdf  seven-dof.xacro
src/learning_tf/: CMakeLists.txt  package.xml
src/learning_tf/src/: turtle_tf_broadcaster.cpp
src/nodelet_hello_world/: CMakeLists.txt  hello_world.xml  package.xml
src/nodelet_hello_world/src/: hello_world.cpp
